test/interaction/Issue2447c.out
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue2447c (Issue2447c.agda)." t)
(agda2-info-action "*Type-checking*" " Checking Issue2447.M (Issue2447/M.agda)." t)
(agda2-info-action "*Type-checking*" " Checking Issue2447.Parse-error (Issue2447/Parse-error.agda)." t)
(agda2-info-action "*Error*" "Issue2447c.agda:2.1-29: error: [ModuleNameUnexpected] The name of the top level module does not match the file name. The unnamed module (atIssue2447/Parse-error.agda:1.1) should probably be named Issue2447.Parse-error when scope checking the declaration import Issue2447.Parse-error" nil)
((last . 3) . (agda2-maybe-goto '("Issue2447c.agda" . 20)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
(agda2-status-action "")
(agda2-info-action "*Type-checking*" "" nil)
(agda2-highlight-clear)
(agda2-info-action "*Type-checking*" "Checking Issue2447c (Issue2447c.agda)." t)
(agda2-info-action "*Type-checking*" " Checking Issue2447.Parse-error (Issue2447/Parse-error.agda)." t)
(agda2-info-action "*Error*" "Issue2447c.agda:2.1-29: error: [ModuleNameUnexpected] The name of the top level module does not match the file name. The unnamed module (atIssue2447/Parse-error.agda:1.1) should probably be named Issue2447.Parse-error when scope checking the declaration import Issue2447.Parse-error" nil)
((last . 3) . (agda2-maybe-goto '("Issue2447c.agda" . 20)))
(agda2-highlight-load-and-delete-action)
(agda2-status-action "")
