test/interaction/Issue2447c.agda
import Issue2447.M
import Issue2447.Parse-error
